Fix linter errors

--- a/renovate.json5
+++ b/renovate.json5
@@ -7,7 +7,7 @@
     {
       customType: 'regex',
       managerFilePatterns: [
-        '/^api/Makefile$/',
+        '/^Makefile$/',
       ],
       matchStrings: [
         'go install (?<depName>[^@]+)@(?<currentValue>[0-9a-zA-Z.]+)',
@@ -17,7 +17,7 @@
     {
       customType: 'regex',
       managerFilePatterns: [
-        '/^api/go.mod$/',
+        '/^go.mod$/',
       ],
       matchStrings: [
         '\\sgo (?<currentValue>.+?)\\s',
