--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ services:
   db:
     image: postgres:18
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
     ports:
       - "5432:5432"
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
+    
 
 volumes:
   postgres_data:
